--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.545.0",
+    "marked": "^16.4.0",
     "preact": "^10.27.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.14"
