Add snowflake ID generation for unique note blocks and refactor save/load functionality
- Introduced `@skorotkiewicz/snowflake-id` for generating unique IDs for note blocks.
- Refactored note saving to store each block as a separate markdown file.
- Updated loading mechanism to read markdown files and extract note details.
- Enhanced block management with improved error handling during save and delete operations.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
+    "@skorotkiewicz/snowflake-id": "^1.0.1",
     "@tailwindcss/vite": "^4.1.14",
     "@tauri-apps/api": "^2.8.0",
     "@tauri-apps/plugin-opener": "^2.5.0",
