--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@mdxeditor/editor": "^3.47.0",
     "@radix-ui/react-slot": "^1.2.3",
     "@skorotkiewicz/snowflake-id": "^1.0.1",
     "@tailwindcss/vite": "^4.1.14",
