--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "zenus",
+  "description": "A beautiful note-taking app",
   "private": true,
-  "version": "0.1.0",
+  "version": "0.2.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,6 +11,8 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@codemirror/lang-markdown": "^6.5.0",
+    "@codemirror/theme-one-dark": "^6.1.3",
     "@hello-pangea/dnd": "^18.0.1",
     "@mdxeditor/editor": "^3.50.0",
     "@radix-ui/react-slot": "^1.2.4",
@@ -17,6 +20,9 @@
     "@tailwindcss/vite": "^4.1.17",
     "@tauri-apps/api": "^2.9.0",
     "@tauri-apps/plugin-opener": "^2.5.2",
+    "@uiw/codemirror-theme-github": "^4.25.3",
+    "@uiw/codemirror-theme-xcode": "^4.25.3",
+    "@uiw/react-codemirror": "^4.25.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.555.0",
