chore: Remove app title, refine card styling, and update CI workflow to build on tags and pull requests.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,8 +2,9 @@ name: 'publish'
 
 on:
   push:
-    branches:
-      - main
+    tags: [ '*' ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
   publish-tauri:
