--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,7 +17,7 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 
 [[bin]]
 name = "zenus-headless"
-path = "src/server.rs"
+path = "src/headless.rs"
 
 [build-dependencies]
 tauri-build = { version = "2", features = [], optional = true }
